# FortiFide

./: .gitignore  CONTRIBUTING.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
docs/: REASONING.md  founding-document.md  pattern-library.md  privacy-policy.md  setup.md  terms-of-use.md  visual-philosophy.md
scripts/: build-smart-installer.mjs  nsis-hooks.nsh  rename-installer.mjs  set-cargo-variant.mjs  smart-installer.nsi
sidecar/: analyzer.ts  api-types.ts  build-sidecar.mjs  classifier.ts  diarize_server.py  requirements.txt  rhetorical-server.ts  start_diarize.bat  start_diarize.cjs  start_diarize.mjs  storage-queries.ts
src/: App.css  App.tsx  bridge.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: bridge.rs  diagnostics.rs  lib.rs  main.rs  tray.rs
src-tauri/src/audio/: loopback.rs  microphone.rs  mod.rs  retranscribe.rs  transcriber.rs
src-tauri/src/capture/: accessibility.rs  batcher.rs  mod.rs  ocr.rs
src-tauri/src/setup/: install.rs  mod.rs  proc.rs  types.rs  util.rs
src-tauri/src/setup/checks/: cuda.rs  gpu.rs  hf_models.rs  hf_token.rs  mod.rs  pyannote.rs  python.rs  whisper.rs
src/components/: AnnotationMark.tsx  CaptureStatus.tsx  CaptureView.tsx  CheckInPanel.tsx  CpuModeBanner.tsx  CrashRecoveryDialog.tsx  DataTab.tsx  DisplayPreferences.tsx  InsightsTab.tsx  IntentionOutcomeMatrix.tsx  LibraryTab.tsx  LiveTranscript.tsx  MapView.tsx  MediaTab.tsx  OnboardingModal.tsx  PatternCard.tsx  PatternStateHeatmap.tsx  PythonVersionModal.tsx  SessionDetail.tsx  SessionList.tsx  SessionRitualCard.tsx  SessionsView.tsx  SettingsTab.tsx  Sidebar.tsx  SourceImpactTable.tsx  StateRadar.tsx  TopBar.tsx  TranscriptView.tsx
src/components/setup/: ActionCardShell.tsx  SetupStatusRow.tsx  SetupStepDetail.tsx  SetupStepList.tsx  SetupSuccessScreen.tsx  SetupWizard.tsx  StatusIcon.tsx  WizardButton.tsx  setupSteps.ts  setupStyles.ts  setupTypes.ts  shellOpen.ts
src/components/setup/actionCards/: CudaActionCard.tsx  GpuActionCard.tsx  HfModelsActionCard.tsx  HfTokenActionCard.tsx  PyannoteActionCard.tsx  PythonActionCard.tsx  WhisperActionCard.tsx
src/lib/: api-types.ts  bridge.ts  modeAvailability.ts
src/stores/: display-store.ts  session-store.ts
